--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,4 @@
 ---
-title: "Wczesne Wykrywanie Ryzyka Zawału Serca"
 warning: false
 number-sections: false
 toc: false
@@ -21,7 +20,13 @@ library(gridExtra)
 library(patchwork)
 ```
 
-![](images/article/logo_pollub_wmit.jpg){fig-align="left"}
+::: hero-wrapper
+<a href="#start" class="hero-button">ZACZYNAJMY</a>
+
+<a href="#start"> ![](images/article/Mandatory-01.png){.hero-fullscreen} </a>
+:::
+
+![](images/article/logo_pollub_wmit.jpg){#start}
 
 ## Wstęp
 
@@ -33,7 +38,7 @@ Zawał serca jest stanem nagłym, w którym dochodzi do martwicy części mięś
 
 Oprócz miażdżycy istnieją także inne mechanizmy prowadzące do zawału, choć występują rzadziej. Należą do nich: skurcz tętnicy wieńcowej, rozwarstwienie tętnicy wieńcowej, zatorowość wieńcowa, ciężka niedokrwistość, tachyarytmie znacząco zwiększające zapotrzebowanie serca na tlen oraz wrodzone nieprawidłowości anatomiczne naczyń. Każdy z tych czynników może wywołać krytyczne zaburzenie równowagi między zapotrzebowaniem serca na tlen a możliwościami jego dostarczenia.
 
-![](images/article/picture_3.png){fig-align="left" style="float: right; margin: 10px;" width="260"}
+![](images/article/picture_3.png){style="float: right; margin-right: 50px; margin-left: 20px; padding-right: 20px;" fig-align="left" width="260"}
 
 Kluczowe znaczenie w rozwoju zawału mają czynniki ryzyka, które mogą działać niezależnie lub wzajemnie się potęgować. Do najważniejszych modyfikowalnych czynników ryzyka należą: palenie papierosów, nadciśnienie tętnicze, wysoki poziom cholesterolu LDL, cukrzyca typu 2, otyłość brzuszna, brak aktywności fizycznej oraz przewlekły stres. W grupie czynników niemodyfikowalnych wymienia się: wiek, płeć męską oraz obciążenie rodzinne chorobami serca. Współczesne badania wykazują, że połączenie wielu z tych czynników może znacząco zwiększać ryzyko ostrego incydentu wieńcowego, a pierwsze zmiany miażdżycowe mogą pojawiać się już w młodym wieku, często bezobjawowo.
 
